--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.8",
+    "@tinymce/tinymce-angular": "^8.0.1",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "tinymce": "^7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
